# FootballStats

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: league_dict.json
data/: primeira_liga_standings.csv
docs/: index.html
notebooks/: exploration.py  exploration_wasm.py
reports/: report1.html
src/football_competitiveness/: __init__.py  config.py
src/football_competitiveness/data/: __init__.py  fetcher.py
src/football_competitiveness/metrics/: __init__.py  gini.py  point_gaps.py
src/football_competitiveness/visualization/: __init__.py  charts.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_gini.py  test_point_gaps.py
