[project]
name = "football-competitiveness"
version = "0.1.0"
description = "Analyze Portuguese Primeira Liga competitiveness over 10 years using Gini coefficients and point gap metrics"
authors = [
    { name = "Luis Seabra", email = "luismavseabra@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0.0",
    "altair>=5.0.0",
    "marimo>=0.10.0",
    "numpy>=2.0.0",
    "pyzmq>=27.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/football_competitiveness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
